# focus-loop

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
