[package]
name = "focus-loop"
version = "1.0.0"
description = "Pomodoro-style focus/relax interval timer"
authors = ["Huynh Hoang <huynhuynh3664@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
